# AOC2024

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
.devcontainer/: Dockerfile  devcontainer.json
AOC/: Attr.hpp  CMakeLists.txt  Fnv.hpp  Icl.hpp  Mdspan.hpp  MdspanTest.cpp  TscClock.cpp  TscClock.hpp  aplenty.cpp  bridge_repair.cpp  camel_cards.cpp  ceres_search.cpp  chronal_calibration.cpp  chronospatial_computer.cpp  claw_contraption.cpp  clumsy_crucible.cpp  code_chronicle.cpp  cosmic_expansion.cpp  crossed_wires.cpp  cube_conundrum.cpp  disk_fragmenter.cpp  garden_groups.cpp  gear_ratios.cpp  guard_gallivant.cpp  haunted_wasteland.cpp  historian_hysteria.cpp  hoof_it.cpp  hot_springs.cpp  icl.hpp  if_you_give_a_seed_a_fertilizer.cpp  keypad_conundrum.cpp  keypad_conundrum_1.cpp  keypad_conundrum_fail.cpp  lan_party.cpp  lavaduct_lagoon.cpp  lens_library.cpp  linen_layout.cpp  linen_layout_part1.cpp  mirage_maintenance.cpp  monkey_market.cpp  (+22 more)
AOC/override/boost/icl/: impl_config.hpp
